<resources>
    <string name="app_name">Hilarity</string>
    <string name="action_settings">Settings</string>
    <string name="languages">Languages</string>
    <string name="jokeTitle">jokeTitle</string>
    <string name="jokeBody">jokeBody</string>
    <string name="userName">userName</string>
    <string name="preference_saved_languages_set">saved languages</string>
    <string name="title_activity_main22">Main22Activity</string>
    <string name="genres">Collection</string>
    <string name="jokes_list">Jokes Lists</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_login">Sign in or Register</string>

    <!-- Strings related to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_user_name">UserNameActivity</string>
    <string name="title_activity_user_settings">User Settings</string>
    <string name="subscribed">Subscribed</string>
    <string name="subscribe">Subscribe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="auto_translate">Automatic Translation</string>
    <string name="nation_of_origin">Nation of Origin</string>
    <string name="age">Age</string>
    <string name="generic_profile_tagline">generic tagline</string>
    <string name="enter_user_name">Enter new user name</string>
    <string name="change_profile_img">Change Profile Picture</string>
    <string name="user_name_valid">User name is valid</string>
    <string name="user_name_invalid">User name is invalid</string>
    <string name="check_user_name_validity">Check if user name is valid</string>
    <string name="profile_tagline">Profile Tagline</string>
    <string name="profile_tagline_hint">Hi, my name is …</string>
    <string name="add_new_langauge">Add new languages</string>
    <string name="posts">posts</string>
    <string name="search">Search</string>
    <string name="user">user</string>
    <string name="take_picture_cd">take picture</string>
    <string name="switch_camera_cd">switch camera</string>
    <string name="gallery_cd">Select Photo From Device</string>
    <string name="continue_cd">proceed with post submission</string>
    <string name="title">title</string>
    <string name="save_draft_cd">save draft of post</string>
    <string name="tagline">tagline</string>
    <string name="discard_post_cd">discard post</string>
    <string name="audio_post_cd">create audio media post</string>
    <string name="document_post_cd">create document post</string>
    <string name="add_new_comment_cd">add new comment</string>
    <string name="change_collection_restriction_cd">change collection restriction level</string>
    <string name="visual_post_cd">create visual media post</string>
    <string name="like_button_cd">like button</string>
    <string name="open_overflow_cd">open overflow menu</string>
    <string name="add_to_collection_cd">add post to collection</string>
    <string name="continue_onboarding_cd">proceed in the onboarding process</string>
    <string name="user_post_cd">user posts</string>
    <string name="add_forum_reply">add forum reply</string>
    <string name="shoot_video_cd">shoot video</string>
    <string name="make_gif_cd">make GIF</string>
    <string name="start_recording_capture_cd">Start recording or capture photo</string>
    <string name="content_device">content from device</string>
    <string name="gif">GIF</string>
    <string name="photo">photo</string>
    <string name="video">video</string>
    <string name="send_media_message">send photo or video</string>
    <string name="send_message">send message</string>
    <string name="visual_post_content_cd">visual post content</string>
    <string name="media_content_message_cd">media content in message</string>
    <string name="user_collections_cd">user collections</string>
    <string name="proceed_cd">proceed</string>
    <string name="google_sigin_cd">google sign in</string>
    <string name="no_posts_cd">no posts to show</string>
    <string name="start_recording">start recording</string>
    <string name="pause_recording">pause recording</string>
    <string name="stop_recording">stop recording</string>
    <string name="send_new_question">send new forum question</string>
    <string name="user_likes">user likes</string>
    <string name="feed">Feed</string>
    <string name="explore">Explore</string>
    <string name="forums">Forums</string>
    <string name="settings">Settings</string>
    <string name="message_list">List of Messages</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="user_settings">User Settings</string>
    <string name="notifications">Notifications</string>
    <string name="content_creator">Content Creator</string>
    <string name="payments">Payments</string>
    <string name="beta_program">Beta Program</string>
    <string name="change_name">Change User Name</string>
    <string name="tag">type tag</string>
    <string name="pick_name">Pick User Name</string>
    <string name="delete">delete</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="collection_title">Add Collection Title</string>
    <string name="restricted">Restricted</string>
    <string name="messages">Messages</string>
    <string name="mentions">Mentions</string>
    <string name="followers">Followers</string>
    <string name="forum_replies">Forum Replies</string>
    <string name="reply">reply</string>
    <string name="dob">Date of Birth</string>
    <string name="select_picture">Select Picture</string>
    <string name="more">more</string>

    <string name="uid" translatable="false">uid</string>
    <string name="fragment" translatable="false">fragment</string>
    <string name="number" translatable="false">number</string>
    <string name="init" translatable="false">init</string>
    <string name="full_screen" translatable="false">full screen video</string>
    <string name="pushId" translatable="false">pushId</string>
    <string name="posttype" translatable="false">posttype</string>
    <string name="filepath" translatable="false">filepath</string>
    <string name="path" translatable="false">path</string>
    <string name="type" translatable="false">type</string>
    <string name="body" translatable="false">body</string>
    <string name="position" translatable="false">position</string>
    <string name="forums_lc" translatable="false">forums</string>
    <string name="forum_lc" translatable="false">forum</string>
    <string name="mentions_lc" translatable="false">mention</string>
    <string name="comment" translatable="false">comment</string>
    <string name="message" translatable="false">message</string>
    <string name="new_followers_notification" translatable="false">new follower notification</string>
    <string name="new_forum_reply_notification" translatable="false">new forum reply notification</string>
    <string name="new_mentions_notification" translatable="false">new mentions notification</string>
    <string name="new_message_notification" translatable="false">new message notification</string>
</resources>
