<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".settings.userSettings.UserSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_user_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/change_name"
            android:textColor="@color/green_8"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/green_8"
            android:ems="10"
            android:hint="@string/enter_user_name"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/green_8"
            app:layout_constraintEnd_toStartOf="@+id/user_name_valid_imageview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_user_name_textView" />

        <ImageView
            android:id="@+id/user_name_valid_imageview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:contentDescription="@string/check_user_name_validity"
            android:src="@drawable/ic_check_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_name_editText" />

        <Button
            android:id="@+id/select_new_photo_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_border"
            android:text="@string/change_profile_img"
            android:textColor="@color/green_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_editText" />

        <TextView
            android:id="@+id/profile_tagline_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_tagline"
            android:textColor="@color/green_8"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_new_photo_button" />

        <EditText
            android:id="@+id/profile_tagline_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/green_8"
            android:ems="10"
            android:hint="@string/profile_tagline_hint"
            android:inputType="textPersonName"
            android:textColor="@color/green_8"
            android:textColorHint="@color/green_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_tagline_textView" />

        <TextView
            android:id="@+id/auto_translate_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/auto_translate"
            android:textColor="@color/green_8"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/auto_translate_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_tagline_editText" />

        <Switch
            android:id="@+id/auto_translate_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/auto_translate_textView" />

        <TextView
            android:id="@+id/nation_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nation_of_origin"
            android:textColor="@color/green_8"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auto_translate_textView" />

        <TextView
            android:id="@+id/age_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/age"
            android:textColor="@color/green_8"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flag_textView" />

        <TextView
            android:id="@+id/age_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="01 Jan 1970"
            android:textColor="@color/green_8"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age_title_textView" />

        <TextView
            android:id="@+id/flag_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="🇺🇸"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nation_textView" />

        <RadioGroup
            android:id="@+id/gender_radiogroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_textView">

            <RadioButton
                android:id="@+id/trans_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/green_8"
                android:text="\u26a7"
                android:textColor="@color/green_8"
                android:textSize="40sp" />

            <RadioButton
                android:id="@+id/female_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/green_8"
                android:text="\u2640"
                android:textColor="@color/green_8"
                android:textSize="40sp" />

            <RadioButton
                android:id="@+id/male_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/green_8"
                android:text="\u2642"
                android:textColor="@color/green_8"
                android:textSize="40sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/gender_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age_textView"
            android:textColor="@color/green_8"
            android:textSize="14sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>