<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageButton
            android:id="@+id/favorite_imageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hilarity_mask_unlike"
            android:contentDescription="@string/like_button_cd"/>

        <TextView
            android:id="@+id/likes_counter_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="@color/green_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/favorite_imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/comment_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/likes_counter_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hilarity_comment"
            android:contentDescription="@string/add_new_comment_cd"/>

        <TextView
            android:id="@+id/comment_counter_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="@color/green_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/comment_imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@android:style/TextAppearance.Material.Body2"
            android:textColor="@color/green_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/comment_counter_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/options_imageButton"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_vert_black_24dp"
            android:contentDescription="@string/open_overflow_cd"/>

        <ImageButton
            android:id="@+id/collection_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@null"
            app:srcCompat="@drawable/hilarity_mask_collections_green"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/options_imageButton"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/add_to_collection_cd"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>